--- a/styles/style.css
+++ b/styles/style.css
@@ -148,3 +148,206 @@
         margin-left: 40px;
     } 
 }
+.section {
+}
+.section__flex-cards {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.flex-card {
+    width: 370px;
+    height: 228px;
+    padding-top: 90px;
+    margin-bottom: 90px;
+}   
+.flex-item {
+    gap: 30px;
+}
+.card-icon {
+    width: 68px;
+    height: 68px;
+    margin-bottom: 30px;
+}
+.card-title {
+    font-family: var(--font-family);
+    font-weight: 600;
+    font-size: 24px;
+    text-transform: uppercase;
+    color: #000;
+    padding-bottom: 10px;
+}
+.card-text {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 200%;
+    color: #000;
+    margin-bottom: 90px;
+}
+@media screen and (max-width: 1400px){
+    .flex-item {
+        width: 345px;
+        padding-right: 20px;
+    }
+    
+}
+@media screen and (max-width: 1090px){
+    .flex-item {
+        width: 310px;
+        padding-right: 30px;
+        margin-bottom: 15px;
+    }
+}
+@media screen and (max-width: 994px){
+    .section__flex-cards {
+        flex-direction: column;
+    }
+    .flex-item {
+        width: 315px;
+        height: 228px;
+    }
+    .card-icon {
+        width: 68px;
+        height: 44px;
+        margin-bottom: 30px;
+    }
+    .card-title {
+        margin-bottom: 10px;
+    }
+    .card-text {
+        padding-bottom: 60px;
+    } 
+    .card-text:last-child {
+        padding-bottom: 60px;
+    }    
+}
+@media screen and (max-width: 1400px){
+    .flex-item {
+        padding-bottom: 30px;
+    }   
+}
+@media screen and (max-width: 400px){
+    .flex-card {
+        padding-left: 40px;
+    }
+    .flex-item {
+        width: 315px;
+    }    
+}
+.porfolio {
+    background-color: #f1f1f1;
+}
+.porfolio__content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.porfolio__block-1 {
+    width: 930px;
+    height: 500px;
+}
+.porfolio__block-2 {
+    width: 930px;
+    height: 500px;
+
+}
+.porfolio__block-3 {
+    width: 930px;
+    height: 500px;
+
+}
+.porfolio-h3 {
+    font-family: var(--font-family);
+    font-weight: 600;
+    font-size: 34px;
+    text-align: center;
+    color: #070707;
+    padding-top: 90px;
+    margin-bottom: 70px;
+}
+.block-img {
+    margin-bottom: 40px;
+}
+.style-porf-1 {
+    padding-bottom: 90px;
+    
+}
+.style-porf-2 {
+    padding-bottom: 90px;
+}
+.porfolio-h5 {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 18px;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    text-align: center;
+    color: #070707;
+    padding-top: 40px;
+}
+.contacts {
+}
+.contacts__content {
+}
+.contacts__top {
+}
+.contacts-h3 {
+    font-family: var(--font-family);
+    font-weight: 600;
+    font-size: 34px;
+    text-align: center;
+    color: #070707;
+    padding-top: 90px;
+    padding-bottom: 40px;
+}
+.contacts-p {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 18px;
+    text-align: center;
+    color: #070707;
+    padding-bottom: 40px;
+}
+.contacts__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btn {
+}
+.contacts-btn {
+    width: 180px;
+    height: 42px;
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 18px;
+    text-align: center;
+    color: #fff;
+    margin-bottom: 80px;
+}
+.contacts__middle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
+}
+.icon {
+    width: 39px;
+    height: 39px;
+    margin-bottom: 40px;
+}
+
+.contacts__bottom {
+}
+.bottom-p {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 14px;
+    text-align: center;
+    color: #828282;
+    margin-bottom: 90px;
+}
+
+
